Fixes unintentional horizontal scrolling of Widgy content
(cherry picked from commit 9d0d992819d12353ff82a9195ca157a63d0a267f)

--- a/widgy/static/widgy/css/widgy_layout.scss
+++ b/widgy/static/widgy/css/widgy_layout.scss
@@ -1,5 +1,12 @@
 @import "widgy_common.scss";
 
+// Mezzanine Override
+body.widgets-projectwidgypage {
+  #container {
+    overflow: hidden;
+  }
+}
+
 .widgy {
   @include clearfix;
 
